# fspplib

./: .clang-format  .gitattribute  .travis.yml  CMakeLists.txt  LICENSE  README.md  TODO  appveyor.yml  meson.build
cmake/: features.cmake
src/: CMakeLists.txt  common.cpp  common.hpp  dir_iterator.cpp  dir_iterator_private.hpp  file.cpp  memory_vfs.cpp  memory_vfs.hpp  meson.build  operations.cpp  operations_impl.hpp  path.cpp  utils.cpp  vfs.cpp  vfs_private.hpp
src/include/fspp/: filesystem.hpp  limits.hpp  utils.hpp  utils.ipp
src/include/fspp/details/: config.hpp.in  config.hpp.in-meson  dir_iterator.hpp  dir_iterator.ipp  file.hpp  file.ipp  file_status.hpp  filesystem_error.hpp  operations.hpp  path.hpp  path.ipp  path_convert.hpp  platform.hpp  types.hpp  vfs.hpp  vfs.ipp
src/include/fspp/estd/: algorithm.hpp  memory.hpp  optional.hpp  type_traits.hpp
src/include/fspp/utility/: bitmask_type.hpp  scope.hpp  time_logger.hpp
src/mac/: operations_mac.cpp
src/posix/: dir_iterator_posix.cpp  limits_posix.cpp  operations_posix.cpp
src/test/: CMakeLists.txt  meson.build  test_utils.hpp  tst_canonical.cpp  tst_dir_entry.cpp  tst_dir_iter.cpp  tst_operations.cpp  tst_path.cpp  tst_performance.cpp  tst_types.cpp
src/unix/: operations_unix.cpp
src/win/: dir_iterator_win.cpp  limits_win.cpp  operations_win.cpp
